Fix truncated button icons on Safari
Removing margin offset to fix issue with button icons being
visually truncated on Safari. Removing additional redundant
code around same icon/buttons.

--- a/app/common/styles/base/buttons.scss
+++ b/app/common/styles/base/buttons.scss
@@ -53,7 +53,6 @@ button,
     display: inline-block;
     margin-right: 0.3em;
     vertical-align: bottom;
-    margin-left: -0.5em;
   }
   img {
     width: 1.5em;
